// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with JSX header 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_3t_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with all boolean prop combinations > dropdown boolean 0 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_79_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with all boolean prop combinations > dropdown boolean 1 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 rounded-lg border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed !aspect-square !rounded-full !p-0 !h-11 !w-11 [&>span]:!p-0 [&>span]:!m-0"
  id="_r_7b_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <span
      class="ml-2 inline-flex h-4 w-4 items-center justify-center rounded-full bg-cyan-200 text-xs font-semibold text-cyan-800"
      data-testid="flowbite-button-label"
    />
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with all boolean prop combinations > dropdown boolean 2 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_7d_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with all boolean prop combinations > dropdown boolean 3 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_7f_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with all boolean prop combinations > dropdown boolean 4 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_7h_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with all boolean prop combinations > dropdown boolean 5 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_7j_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with all positions > dropdown position 0 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_4l_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with all positions > dropdown position 1 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_4n_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with all positions > dropdown position 2 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_4p_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with all positions > dropdown position 3 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_4r_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with all props provided 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Complete Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 dark:focus:ring-green-800 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-success dark:bg-success hover:enabled:bg-system-success-tints-600 dark:hover:enabled:bg-system-success-tints-600 focus:ring-system-success-tints-200 rounded-lg"
  id="_r_5j_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-5 py-2.5 text-base"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Complete Dropdown
      <div
        class="flex items-center"
      >
        <span
          data-testid="mock-icon"
        >
          Icon
        </span>
      </div>
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with all sizes > dropdown size 0 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_4f_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-3 py-1.5 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with all sizes > dropdown size 1 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_4h_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with all sizes > dropdown size 2 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_4j_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-5 py-2.5 text-base"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with all string prop combinations > dropdown string 0 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="undefined dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_7l_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    />
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with all string prop combinations > dropdown string 1 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Custom Title dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_7n_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Custom Title
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with all string prop combinations > dropdown string 2 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label=" dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_7p_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    />
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with all string prop combinations > dropdown string 3 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_7r_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with all string prop combinations > dropdown string 4 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_7t_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with all string prop combinations > dropdown string 5 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_7v_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with checkbox items 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_49_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with complex items 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_73_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with custom title 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Custom Title dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_3p_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Custom Title
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with default props 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_3n_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with different colors > dropdown color 0 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_4t_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with different colors > dropdown color 1 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button-alt dark:bg-surface-button-alt hover:enabled:bg-surface-button-alt-hover dark:hover:enabled:bg-surface-button-alt-hover focus:ring-surface-button-alt-pressed rounded-lg"
  id="_r_4v_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with different colors > dropdown color 2 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 dark:focus:ring-green-800 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-success dark:bg-success hover:enabled:bg-system-success-tints-600 dark:hover:enabled:bg-system-success-tints-600 focus:ring-system-success-tints-200 rounded-lg"
  id="_r_51_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with different colors > dropdown color 3 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 dark:focus:ring-yellow-900 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-warning dark:bg-warning hover:enabled:bg-system-warning-tints-600 dark:hover:enabled:bg-system-warning-tints-600 focus:ring-system-warning-tints-200 rounded-lg"
  id="_r_53_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with different colors > dropdown color 4 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-error dark:bg-error hover:enabled:bg-system-error-tints-600 dark:hover:enabled:bg-system-error-tints-600 focus:ring-system-error-tints-200 rounded-lg"
  id="_r_55_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with different colors > dropdown color 5 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 focus:outline-none undefined rounded-lg"
  id="_r_57_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with disabled checkbox items 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_4d_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with disabled items 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_45_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with divider items 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_47_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with empty items array 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_5f_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with empty string header 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_65_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with empty string title 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label=" dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_63_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    />
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with header 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_3r_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with icon 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_59_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
      <div
        class="flex items-center"
      >
        <span
          data-testid="mock-icon"
        >
          Icon
        </span>
      </div>
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with icon only 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 rounded-lg border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed !aspect-square !rounded-full !p-0 !h-11 !w-11 [&>span]:!p-0 [&>span]:!m-0"
  id="_r_5b_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="flex h-full w-full items-center justify-center"
    >
      <span
        data-testid="mock-icon"
      >
        Icon
      </span>
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with inline prop 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_5d_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with items 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_3v_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with items with custom className 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_43_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with items with icons 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_41_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with items without labels 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_75_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with long title 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="This is a very long title for the dropdown component that should be handled properly dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_5l_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      This is a very long title for the dropdown component that should be handled properly
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with many items 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_71_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with mixed item types 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_77_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with null color 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 focus:outline-none undefined rounded-lg"
  id="_r_6n_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with null header 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_6d_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with null iconOnly 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_6r_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with null inline 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_6v_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with null size 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_6h_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with null title 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="null dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_69_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    />
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with special characters in header 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_5r_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with special characters in item labels 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_5v_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with special characters in title 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Dropdown: <script>alert("test")</script> & More dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_5n_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Dropdown: &lt;script&gt;alert("test")&lt;/script&gt; & More
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with unchecked checkbox items 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_4b_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with undefined color 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_6l_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with undefined header 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_6b_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with undefined iconOnly 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_6p_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with undefined inline 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_6t_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with undefined items 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_5h_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with undefined placement 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_6j_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with undefined size 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_6f_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with undefined title 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="undefined dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_67_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    />
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with unicode characters in header 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_5t_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with unicode characters in item labels 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Test Dropdown dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_61_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      Test Dropdown
    </div>
  </span>
</button>
`;

exports[`Dropdown > Snapshot Tests > matches snapshot for dropdown with unicode characters in title 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="下拉菜单 🗂️ dropdown menu"
  class="group relative flex items-stretch justify-center p-0.5 text-center font-medium transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 border-2 border-transparent focus:outline-none focus:ring-2 text-white bg-surface-button dark:bg-surface-button hover:enabled:bg-surface-button-hover dark:hover:enabled:bg-surface-button-hover focus:ring-surface-button-pressed rounded-lg"
  id="_r_5p_"
  type="button"
>
  <span
    class="flex items-stretch transition-all duration-200 rounded-md px-4 py-2 text-sm"
  >
    <div
      class="inline-flex items-center justify-center"
    >
      下拉菜单 🗂️
    </div>
  </span>
</button>
`;
